--- a/www/CLstyle.css
+++ b/www/CLstyle.css
@@ -3,7 +3,7 @@ IMG {	border: 0;
 
 BODY {background-color: white;
 	font-size: 12pt;
-	font-family: "lucida console";
+	font-family: "arial";
 	}
 
 A {	text-decoration:none;
@@ -26,37 +26,51 @@ A:HOVER {	background: black;
 		font-weight: bold;
 	}
 
-H1 { 	color: black;
-      margin-bottom: 0;
+H1 {
+	margin-top: 0px; 
+	padding: 0px;
+	color: black;
+    margin-bottom: 0;
 	background-colour: white;
 	font-size: 28pt;
 	}
 
-H2 { 	color: black;
-      margin-bottom: 0;
-	margin-top: 10;
+H2 { 
+	margin-top: 0px; 
+	padding: 0px;
+	color: black;
+    margin-bottom: 0px;
 	font-size: 20pt;
 	}
 
-H3 { 	color: black;
-      margin-bottom: 0;
+H3 {
+	margin-top: 0px; 
+	padding: 0px;
+	color: black;
+    margin-bottom: 0px;
 	font-size: 15pt;
 	}
 
-H4 { 	color: black;
-      margin-bottom: 0;
+H4 { 
+	margin-top: 0px; 
+	padding: 0px;
+	color: black;
+    margin-bottom: 0px;
 	font-size: 10pt;
 	}
 
-H5 { 	color: black;
-      margin-bottom: 0;
+H5 { 
+	margin-top: 0px; 
+	padding: 0px;
+	color: black;
+    margin-bottom: 0px;
 	font-weight: normal;
 	font-size: 8pt;
 	}
 
-HR {	border: 0;
-	margin-bottom: 5;
-	margin-top: 5;
+HR {	border: 0px;
+	margin-bottom: 5px;
+	margin-top: 5px;
 	color: black;
 	background-color: black;
 	width: 100%;
