--- a/www/CLstyle.css
+++ b/www/CLstyle.css
@@ -8,32 +8,37 @@ footer {clear:both;}
 img {	border: 0;
 	}
 
-body {background-color: white;
-	font-size: 12pt;
-	font-family: 'Droid Sans', sans-serif;
+body {background-color: yellow;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16pt;
+	font-weight: 300;
 	}
+	
+nav(background-color: green;}
+	
+p { 	
+	font-weight: 300;
+	}	
 
 a {	text-decoration:none;
 	}
 
 a:link {	color: black;
-		font-weight: bold; 
+		font-weight: 600; 
 		text-decoration: none;
 		border-bottom:0px dashed
 	}
 
 a:visited {	color: black;
-		font-weight: bold; 
+		font-weight: 600; 
 		text-decoration: none;
 		border-bottom:0px dashed
 	}
 
 a:hover{background: black;
 		color: white;
-		font-weight: bold;
-	}
-	
-
+		font-weight: 600;
+}
 
 h1 {
 	margin-top: 0px; 
@@ -41,20 +46,24 @@ h1 {
 	color: black;
     margin-bottom: 10px;
 	background-colour: white;
-	font-size: 28pt;
+	font-size: 38pt;
+	font-weight: 600;
+	font-style: none;
 	}
 
 h2{ 
 	margin-top: 0px; 
 	color: black;
-	font-size: 22pt;
+	font-size: 30pt;
+	font-weight: 600;
 	}
 
 h3 {
     margin-bottom: 0px;
-	padding-bottom: 10px;
+	padding-bottom: 0px;
 	color: black;
-	font-size: 18pt;
+	font-size: 20pt;
+	font-weight: 600;
 	}
 
 h4 { 
@@ -99,15 +108,16 @@ li {
 	left: 10px;
 }
 
-p { 	
-	font-size: 12pt;
-	}
-
 pre, tt, code { 
-	font-size: 12pt;
+	font-size: 14pt;
 	}
 	
 code.indent{
+	display: block;
+	margin-top: 10px; 
+	margin-bottom: 10px;
+	padding-top: 0px;
+	padding-bottom: 0px;
 	position: relative; 
 	left: 20px;
 }
@@ -129,11 +139,10 @@ div.cbox{
 	padding-left: 50pt;
 	}
 	
-#nav a {	
-	font-size: 10pt;
-	}
-
+	
 #nav ul{
+	font-size: 10pt;
+	list-style-type: none;
 	margin-top: 0px; 
 	margin-bottom: 0px;
 	padding-top: 0px;
@@ -141,7 +150,7 @@ div.cbox{
 }
 
 #nav h4{
-	margin-top: 0px; 
+	margin-top: 5px; 
 	margin-bottom: 0px;
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -154,5 +163,21 @@ div.cbox{
 	padding-bottom: 0px;
 }
 
+#nav a:link {	color: black;
+		font-weight: 400; 
+		text-decoration: none;
+		border-bottom:0px dashed
+	}
+
+#nav a:visited {	color: black;
+		font-weight: 400; 
+		text-decoration: none;
+		border-bottom:0px dashed
+	}
+
+#nav a:hover{background: black;
+		color: white;
+		font-weight: 400;
+	}
 
 
