--- a/www/CLstyle.css
+++ b/www/CLstyle.css
@@ -1,7 +1,6 @@
 
 header,nav,footer,article {display: block;}
 nav{background-color: white; float:left; width:180px; margin-right: 5px;}
-article {float:left; width:1000px;}
 footer {clear:both;}
 
 img {	border: 0;
@@ -9,14 +8,13 @@ img {	border: 0;
 	max-width: 100%;
 	}
 
-body {background-color: white;
+body {	background-color: white;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16pt;
 	font-weight: 300;
 	}
 	
-p { 	
-	font-weight: 300;
+p { 	font-weight: 300;
 	}	
 
 a {	text-decoration:none;
@@ -35,39 +33,35 @@ a:visited {	color: black;
 		border-bottom:0px dashed
 	}
 
-a:hover{background: black;
+a:hover{	background: black;
 		color: white;
 		font-weight: 600;
 }
 
-h1 {
-	margin-top: 0px; 
+h1 {	margin-top: 0px; 
 	padding-bottom: 0px;
 	color: black;
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 	background-colour: white;
-	font-size: 50pt;
+	font-size: 37.5pt;
 	font-weight: 600;
 	font-style: none;
 	}
 
-h2{ 
-	margin-top: 0px; 
+h2{ 	margin-top: 0px; 
 	color: black;
 	font-size: 30pt;
 	font-weight: 600;
 	}
 
-h3 {
-    margin-bottom: 0px;
+h3 {	margin-bottom: 0px;
 	padding-bottom: 0px;
 	color: black;
 	font-size: 20pt;
 	font-weight: 600;
 	}
 
-h4 { 
-	margin-top: 0px; 
+h4 { 	margin-top: 0px; 
 	margin-bottom: 0px;
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -75,11 +69,10 @@ h4 {
 	font-size: 14pt;
 	}
 
-h5 { 
-	margin-top: 0px; 
+h5 { 	margin-top: 0px; 
 	padding: 0px;
 	color: black;
-    margin-bottom: 0px;
+	margin-bottom: 0px;
 	font-weight: normal;
 	font-size: 8pt;
 	}
@@ -97,7 +90,7 @@ ul {
 	margin-left: 0px;
 	padding-left: 5px;
 	list-style-type: square;
-    list-style-position: outside;
+	list-style-position: outside;
 	position: relative; 
 	left: 0px;
 	}
@@ -135,22 +128,25 @@ td.darker { background-color: #cccccc }
 th { background-color: #bbbbbb }
 
 div.cbox{
-	background-color:	rgb(237,237,237);
+	background-color:	
+	rgb(237,237,237);
 	padding-left: 50pt;
 	}
 
 #main{
 	float: left;
-	margin-left: 15%
+	margin-left: 15%;
+	width: 84%;
 }
 
 
 
 #nav {
-	position: fixed;
+	position: absolute;
 	float: left;
 	width: 14%;
 	min-height: 100%;
+	background-color: white;
 }
 	
 	
