--- a/www/CLstyle.css
+++ b/www/CLstyle.css
@@ -1,6 +1,6 @@
 
 header,nav,footer,article {display: block;}
-nav{background-color: white; float:left; width:180px; margin-right: 5px;}
+
 footer {clear:both;}
 
 img {	border: 0;
@@ -10,7 +10,6 @@ img {	border: 0;
 
 body {	background-color: white;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 16pt;
 	font-weight: 300;
 	}
 	
@@ -41,23 +40,23 @@ a:hover{	background: black;
 h1 {	margin-top: 0px; 
 	padding-bottom: 0px;
 	color: black;
-	margin-bottom: 10px;
+	margin-bottom: 2%;
 	background-colour: white;
-	font-size: 37.5pt;
+	font-size: 300%;
 	font-weight: 600;
 	font-style: none;
 	}
 
 h2{ 	margin-top: 0px; 
 	color: black;
-	font-size: 30pt;
+	font-size: 250%;
 	font-weight: 600;
 	}
 
 h3 {	margin-bottom: 0px;
 	padding-bottom: 0px;
 	color: black;
-	font-size: 20pt;
+	font-size: 200%;
 	font-weight: 600;
 	}
 
@@ -66,7 +65,7 @@ h4 { 	margin-top: 0px;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	color: black;
-	font-size: 14pt;
+	font-size: 120%;
 	}
 
 h5 { 	margin-top: 0px; 
@@ -74,12 +73,12 @@ h5 { 	margin-top: 0px;
 	color: black;
 	margin-bottom: 0px;
 	font-weight: normal;
-	font-size: 8pt;
+	font-size: 120%;
 	}
 
 hr{	border: 0px;
-	margin-bottom: 5px;
-	margin-top: 5px;
+	margin-bottom: 1%;
+	margin-top: 1%;
 	color: black;
 	background-color: black;
 	width: 100%;
@@ -88,7 +87,7 @@ hr{	border: 0px;
 
 ul {  
 	margin-left: 0px;
-	padding-left: 5px;
+	padding-left: 1%;
 	list-style-type: square;
 	list-style-position: outside;
 	position: relative; 
@@ -98,26 +97,26 @@ ul {
 li {
 	font-size: 95%;
 	position: relative; 
-	left: 10px;
+	left: 2%;
 }
 
 pre, tt, code { 
-	font-size: 14pt;
+	font-size: 95%;
 	}
 	
 code.indent{
 	display: block;
-	margin-top: 10px; 
-	margin-bottom: 10px;
+	margin-top: 2%; 
+	margin-bottom: 2%;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	position: relative; 
-	left: 20px;
+	left: 4%;
 }
 
 table { background-color: #dddddd }
 
-td { 	font-size: 10pt;
+td { 	font-size: 62%;
 	background-color: #dddddd ;
 	}
 
@@ -134,6 +133,7 @@ div.cbox{
 	}
 
 #main{
+	font-size: 130%;
 	float: left;
 	margin-left: 15%;
 	width: 84%;
@@ -142,6 +142,7 @@ div.cbox{
 
 
 #nav {
+	font-size: 120%;
 	position: absolute;
 	float: left;
 	width: 14%;
@@ -151,7 +152,7 @@ div.cbox{
 	
 	
 #nav ul{
-	font-size: 10pt;
+	font-size: 62%;
 	list-style-type: none;
 	margin-top: 0px; 
 	margin-bottom: 0px;
@@ -160,7 +161,7 @@ div.cbox{
 }
 
 #nav h4{
-	margin-top: 5px; 
+	margin-top: 1%; 
 	margin-bottom: 0px;
 	padding-top: 0px;
 	padding-bottom: 0px;
