--- a/www/CLstyle.css
+++ b/www/CLstyle.css
@@ -1,25 +1,32 @@
+html{
+    /*min-height:100%;/* make sure it is at least as tall as the viewport */
+    /*position:relative*/
+}
 
 header,nav,footer,article {display: block;}
 
-footer {clear:both;}
-
-img {	border: 0;
+img {
+	border: 0;
 	background: white;
-	max-width: 100%;
+	max-width: 1000px;
+	min-width: 100px;
+	width: 100%;
 	}
 
-body {	background-color: white;
+body {
+	background-color: white;
 	font-family: 'Open Sans', sans-serif;
+	font-size: 16pt;
 	font-weight: 300;
+   /* height:100% /* force the BODY element to match the height of the HTML element */
 	}
 	
-p { 	font-weight: 300;
+p { 	
+	font-weight: 300;
 	}	
 
 a {	text-decoration:none;
 	}
-
-
 
 a:link {	color: black;
 		font-weight: 600; 
@@ -32,53 +39,59 @@ a:visited {	color: black;
 		border-bottom:0px dashed
 	}
 
-a:hover{	background: black;
+a:hover{background: black;
 		color: white;
 		font-weight: 600;
 }
 
-h1 {	margin-top: 0px; 
+h1 {
+	margin-top: 0px; 
 	padding-bottom: 0px;
 	color: black;
-	margin-bottom: 2%;
+    	margin-bottom: 10px;
 	background-colour: white;
-	font-size: 300%;
+	font-size: 37.5pt;
 	font-weight: 600;
 	font-style: none;
 	}
 
-h2{ 	margin-top: 0px; 
+h2{ 
+	margin-top: 0px; 
 	color: black;
-	font-size: 250%;
+	font-size: 30pt;
 	font-weight: 600;
 	}
 
-h3 {	margin-bottom: 0px;
+h3 {
+	margin-bottom: 0px;
 	padding-bottom: 0px;
 	color: black;
-	font-size: 200%;
+	font-size: 20pt;
 	font-weight: 600;
 	}
 
-h4 { 	margin-top: 0px; 
+h4 { 
+	margin-top: 0px; 
 	margin-bottom: 0px;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	color: black;
-	font-size: 120%;
+	font-size: 14pt;
+	font-weight: 600;
 	}
 
-h5 { 	margin-top: 0px; 
+h5 { 
+	margin-top: 0px; 
 	padding: 0px;
 	color: black;
 	margin-bottom: 0px;
 	font-weight: normal;
-	font-size: 120%;
+	font-size: 8pt;
 	}
 
 hr{	border: 0px;
-	margin-bottom: 1%;
-	margin-top: 1%;
+	margin-bottom: 5px;
+	margin-top: 5px;
 	color: black;
 	background-color: black;
 	width: 100%;
@@ -87,7 +100,7 @@ hr{	border: 0px;
 
 ul {  
 	margin-left: 0px;
-	padding-left: 1%;
+	padding-left: 5px;
 	list-style-type: square;
 	list-style-position: outside;
 	position: relative; 
@@ -97,26 +110,30 @@ ul {
 li {
 	font-size: 95%;
 	position: relative; 
-	left: 2%;
+	left: 10px;
 }
 
 pre, tt, code { 
-	font-size: 95%;
+	font-size: 14pt;
 	}
+
+div{
+	float: left;
+}
 	
 code.indent{
 	display: block;
-	margin-top: 2%; 
-	margin-bottom: 2%;
+	margin-top: 10px; 
+	margin-bottom: 10px;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	position: relative; 
-	left: 4%;
+	left: 20px;
 }
 
 table { background-color: #dddddd }
 
-td { 	font-size: 62%;
+td { 	font-size: 10pt;
 	background-color: #dddddd ;
 	}
 
@@ -132,27 +149,25 @@ div.cbox{
 	padding-left: 50pt;
 	}
 
-#main{
-	font-size: 130%;
-	float: left;
-	margin-left: 15%;
-	width: 84%;
-}
-
-
-
-#nav {
-	font-size: 120%;
+nav {
 	position: absolute;
-	float: left;
-	width: 14%;
-	min-height: 100%;
+	/*
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
+	*/
 	background-color: white;
+	width: 15%;
+	min-height: 100%;
+	max-width: 210px;
+	background-color: white;
+	margin-right: 10px;
+
 }
-	
 	
 #nav ul{
-	font-size: 62%;
+	font-size: 10pt;
 	list-style-type: none;
 	margin-top: 0px; 
 	margin-bottom: 0px;
@@ -161,7 +176,7 @@ div.cbox{
 }
 
 #nav h4{
-	margin-top: 1%; 
+	margin-top: 5px; 
 	margin-bottom: 0px;
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -180,7 +195,7 @@ div.cbox{
 		border-bottom:0px dashed
 	}
 
-#nav a:visited {	color: black;
+#nav a:visited {color: black;
 		font-weight: 400; 
 		text-decoration: none;
 		border-bottom:0px dashed
@@ -190,5 +205,21 @@ div.cbox{
 		color: white;
 		font-weight: 400;
 	}
+	
+#main{
+	float: left;
+	margin-left: 17%;
+	width:85%;
+	max-width: 1000px;
+}
+
+footer{
+	clear: both;
+	text-align: right;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+
 
 
